<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OptionsFragment" >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/sectionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game_label" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/randomStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/randomize_starting_player" />

            <TextView
                style="@style/sectionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/debug_label" />

            <CheckBox
                android:id="@+id/networkTraffic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_network_traffic" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/versionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:fontFamily="sans-serif-thin"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textStyle="italic"
        tools:ignore="TextContrastCheck"
        tools:text="Net-code Version" />

</LinearLayout>
