<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/serverLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServerFragment"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/labelPlayers"
        style="@style/sectionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/players_label" />

    <LinearLayout
        android:id="@+id/sectionPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <CheckBox
            android:id="@+id/limitPlayers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limit_number_of_players" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelMaxPlayers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/maxPlayerBox"
                android:text="@string/maximum_players"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/maxPlayerBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/maxPlayerBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="5"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="48dp"
                app:layout_constraintStart_toEndOf="@+id/labelMaxPlayers"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck,HardcodedText" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/labelGameGrid"
        style="@style/sectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_grid_label" />

    <LinearLayout
        android:id="@+id/sectionGameGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelGridDims1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/gridDimsWidthBox"
                android:text="@string/grid_dimensions"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gridDimsWidthBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/gridDimsWidthBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="8"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/labelGridDims2"
                app:layout_constraintHeight_min="48dp"
                app:layout_constraintStart_toEndOf="@+id/labelGridDims1"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck,HardcodedText" />

            <TextView
                android:id="@+id/labelGridDims2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/gridDimsHeightBox"
                android:text="@string/by"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/gridDimsHeightBox"
                app:layout_constraintStart_toEndOf="@+id/gridDimsWidthBox"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/gridDimsHeightBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:text="8"
                android:textAlignment="viewEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="48dp"
                app:layout_constraintStart_toEndOf="@+id/labelGridDims2"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck,HardcodedText" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/labelInternet"
        style="@style/sectionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet_label" />

    <LinearLayout
        android:id="@+id/sectionInternet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/advertiseServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/advertise_on_master_server" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelServerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/serverNameBox"
                android:text="@string/server_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/serverNameBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/serverNameBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="48dp"
                app:layout_constraintStart_toEndOf="@+id/labelServerName"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck"
                tools:text="My Awesome Server" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelServerPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/serverPasswordBox"
                android:text="@string/server_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/serverPasswordBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/serverPasswordBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="textVisiblePassword"
                android:text="@string/not_implemented_yet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="48dp"
                app:layout_constraintStart_toEndOf="@+id/labelServerPassword"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <Button
        android:id="@+id/startServerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_server" />

</LinearLayout>
