<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ClientFragment" >

    <LinearLayout
        android:id="@+id/sectionServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelServer"
            style="@style/sectionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_label" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/labelAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/remoteAddressBox"
                android:text="@string/remote_address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/remoteAddressBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/remoteAddressBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionGo"
                android:importantForAutofill="no"
                android:inputType="textUri"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_min="48dp"
                app:layout_constraintStart_toEndOf="@+id/labelAddress"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="DuplicateSpeakableTextCheck"
                tools:text="matthewrease.net" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelClientInternet"
            style="@style/sectionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/internet_label" />

        <Button
            android:id="@+id/refreshButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refresh_list"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:visibility="gone">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintBottom_toBottomOf="@+id/button2"
                app:layout_constraintEnd_toStartOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/button2"
                tools:text="Matthew's Awesome NetDot Server" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintBottom_toBottomOf="@+id/button2"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintTop_toTopOf="@+id/button2"
                tools:text="6/20" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Join" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            tools:itemCount="4"
            tools:listitem="@layout/server_list_entry" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/server_list_description"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/serverList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/labelClientLocal"
            style="@style/sectionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_label" />

        <Button
            android:id="@+id/refreshLANButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/refresh_list" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerLocal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            tools:itemCount="4"
            tools:listitem="@layout/server_list_entry" />

    </LinearLayout>

    <Button
        android:id="@+id/connectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect" />
</LinearLayout>
